add initial login logic

--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "3oilerplate": "^0.2.42",
     "@next/font": "13.1.1",
     "@types/node": "18.11.17",
+    "@types/randomstring": "^1.1.8",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "normalize.css": "^8.0.1",
+    "querystring": "^0.2.1",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reset-css": "^5.0.1",
