--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "3oilerplate": "^0.2.42",
     "@next/font": "13.1.1",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.17",
     "@types/randomstring": "^1.1.8",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "await-to-js": "^3.0.0",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
@@ -24,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reset-css": "^5.0.1",
+    "spotify-web-api-node": "^5.0.2",
     "typescript": "4.9.4",
     "usehooks-ts": "^2.9.1"
   }
