--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/spotify-web-api-node": "^5.0.7",
     "await-to-js": "^3.0.0",
     "axios": "^1.2.1",
+    "deepmerge": "^4.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
@@ -29,6 +30,8 @@
     "react-dom": "18.2.0",
     "reset-css": "^5.0.1",
     "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.5",
     "typescript": "4.9.4",
     "usehooks-ts": "^2.9.1"
   }
