--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "3oilerplate": "^0.2.42",
+    "3oilerplate": "^0.2.43",
     "@next/font": "13.1.1",
     "@types/axios": "^0.14.0",
     "@types/node": "18.11.17",
@@ -20,6 +20,7 @@
     "await-to-js": "^3.0.0",
     "axios": "^1.2.1",
     "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-next": "^1.4.0",
     "deepmerge": "^4.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -31,7 +32,7 @@
     "react-dom": "18.2.0",
     "reset-css": "^5.0.1",
     "spotify-web-api-node": "^5.0.2",
-    "styled-components": "^5.1.1",
+    "styled-components": "5.3.5",
     "styled-system": "^5.1.5",
     "typescript": "4.9.4",
     "usehooks-ts": "^2.9.1"
