--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
     "normalize.css": "^8.0.1",
     "querystring": "^0.2.1",
