--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^1.4.1",
     "reset-css": "^5.0.1",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "5.3.5",
