--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.1.1",
     "normalize.css": "^8.0.1",
     "querystring": "^0.2.1",
